[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/resource_table/subscenes/popups/QuickResourceSelection.gd" type="Script" id=1]
[ext_resource path="res://addons/resource_table/fonts/input_font.tres" type="DynamicFont" id=2]

[node name="QuickResourceSelection" type="Control"]
margin_right = 512.0
margin_bottom = 345.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 60.0, 120.0 ],
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel"]
anchor_right = 1.0
margin_bottom = 48.0
focus_neighbour_bottom = NodePath("../PopupMenu")
custom_fonts/font = ExtResource( 2 )
placeholder_text = "resource_name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="Panel"]
margin_right = 512.0
margin_bottom = 286.0
focus_neighbour_top = NodePath("../LineEdit")
mouse_filter = 2
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 2 )
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false, "Item 3", null, 0, false, false, 3, 0, null, "", false, "Item 4", null, 0, false, false, 4, 0, null, "", false ]
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hide" from="." to="." method="_on_QuickResourceSelection_hide"]
[connection signal="focus_entered" from="Panel/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="gui_input" from="Panel/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_changed" from="Panel/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Panel/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="focus_entered" from="Panel/PopupMenu" to="." method="_on_PopupMenu_focus_entered"]
[connection signal="index_pressed" from="Panel/PopupMenu" to="." method="_on_PopupMenu_index_pressed"]
